FullQa New/src/objects/SmartTask__c.object
<CustomObject>
    <fields>
        <fullName>StateList__c</fullName>
        <description>The states a client has a physical presence in</description>
        <inlineHelpText>The states a client has a physical presence in</inlineHelpText>
        <label>State List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateOfIncorporation__c</fullName>
        <description>The State the client is incorporated in</description>
        <inlineHelpText>The State the client is incorporated in</inlineHelpText>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Txn_Limit__c</fullName>
        <description>Date that temporary cap on transaction usage ends.  Date cannot extend beyond end of current contract term.</description>
        <label>Stop Transaction Limit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Friendly name for the SmartTask</description>
        <label>Subject</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Reporting for Michelle Toussaint</description>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskLock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set by approval workflow to make task non-modifiable.</description>
        <label>TaskLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <label>TaskStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Pending CAM Release</fullName>
                </value>
                <value>
                    <fullName>Pending Accounting Release</fullName>
                </value>
                <value>
                    <fullName>Pending Service Adjustments</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Recalled by Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Reason__c</fullName>
        <description>Short reason for the SmartTask</description>
        <label>Task Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund or Credit New Order</fullName>
                </value>
                <value>
                    <fullName>Refund or Credit New Order, outside policy</fullName>
                </value>
                <value>
                    <fullName>Refund or Credit Renewal</fullName>
                </value>
                <value>
                    <fullName>Refund or Credit Renewal, outside policy</fullName>
                </value>
                <value>
                    <fullName>Contract Renegotiated After Invoice</fullName>
                </value>
                <value>
                    <fullName>Billing Error</fullName>
                </value>
                <value>
                    <fullName>Customer Concession</fullName>
                </value>
                <value>
                    <fullName>Connector Bug</fullName>
                </value>
                <value>
                    <fullName>Configuration Error</fullName>
                </value>
                <value>
                    <fullName>Compliance-approved P&amp;I</fullName>
                </value>
                <value>
                    <fullName>Compliance-approved Backfiling Credit</fullName>
                </value>
                <value>
                    <fullName>GoLive Incentive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Area__c</field>
                <operation>equals</operation>
                <valueField>Campaign.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SmartTasks (Need)</relationshipLabel>
        <relationshipName>SmartTasks3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxServicesCompleteDateTime__c</fullName>
        <label>TaxServicesCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaxServicesComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaxServicesComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxServices_Assigned__c</fullName>
        <label>TaxServices Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaxServices_Stamp__c</fullName>
        <label>TaxServices Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxSvcsElapsedDays__c</fullName>
        <formula>IF(TaxServicesComplete__c,datevalue(TaxServicesCompleteDateTime__c)-datevalue(TaxServices_Assigned__c),datevalue(NOW()) - datevalue(TaxServices_Assigned__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TaxSvcsElapsedDays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_best_able_to_prevent__c</fullName>
        <description>Team Best Able to Prevent Reoccurrence
Loyalty</description>
        <label>Team best able to prevent reocurrences?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Executive Leadership</fullName>
                </value>
                <value>
                    <fullName>GoLive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>User Knowledge and Learning</fullName>
                </value>
                <value>
                    <fullName>Sales Ops / Order Processing</fullName>
                </value>
                <value>
                    <fullName>Managed Services - Shaheen Chaudhry</fullName>
                </value>
                <value>
                    <fullName>Tax Services - Clifford Turner</fullName>
                </value>
                <value>
                    <fullName>Pro Services - Herve Marzio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TenSoftAssigned__c</fullName>
        <label>SubscriptionAssigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TenSoftCompleteDateTime__c</fullName>
        <label>TenSoftCompleteDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TenSoft_Change__c</fullName>
        <description>Proposed change to TenSoft renewal invoicing rules</description>
        <label>Subscription Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TenSoft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TenSoft_SLA__c</fullName>
        <formula>TenSoftCompleteDateTime__c  - TenSoftAssigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenSoft SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenSoft_Stamp__c</fullName>
        <label>Subscription Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TensoftChangePeek__c</fullName>
        <description>Checks to see if Tensoft Change is blank or not.</description>
        <label>Tensoft Change Peek</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing_Instructions__c</fullName>
        <label>Timing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TotalPerBillFee__c</fullName>
        <description>Avalara Bill Pay per Bill Fee + Avalara Bill Pay with Asset, Customer, or Site Allocation break out per Bill Fee</description>
        <formula>BillPayServiceFee__c +  BillPayw_AllocationFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Avalara Bill Pay per Bill Fee + Avalara Bill Pay with Asset, Customer, or Site Allocation break out per Bill Fee</inlineHelpText>
        <label>Total Per Bill Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPerReturnFee__c</fullName>
        <description>Signature Ready Returns per Return Fee + Signed Returns with (POA) per Return Fee</description>
        <formula>SRRPerReturnFee__c +  SRSPerReturnFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Signature Ready Returns per Return Fee + Signed Returns with (POA) per Return Fee</inlineHelpText>
        <label>Total Per Return Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Credit_Effective_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date that Transaction Credit should be applied to usage.</description>
        <label>Transaction Credit Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Credit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of AvaTax Transactions to be credited to account in current contract period.</description>
        <label>Transaction Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Limit__c</fullName>
        <description>Maximum number of AvaTax Transactions to include in billable usage for period Start Txn Cap date through Stop Transaction Cap date.</description>
        <label>Transaction Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unreal_Recognized_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if the case represents unreal recognized revenue, that is, no real revenue opportunity existed.
Loyalty -</description>
        <inlineHelpText>Select if the case represents unreal recognized revenue, that is, no real revenue opportunity existed.</inlineHelpText>
        <label>Unreal Recognized Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VOC_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to initiate a process that creates a VOC record.</description>
        <label>VOC Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueAfterChange__c</fullName>
        <description>Value to Avalara if proposed change is made.</description>
        <formula>IF(ValueNow__c = 0,Billing_Change_Proposed__c,ValueNow__c +  Billing_Change_Proposed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ValueAfterChange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValueNow__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value Before Adjustment</description>
        <label>Value Now</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Where_did_the_issue_first_occur__c</fullName>
        <description>Sales	Close sale and set expectations for Avalara experience
Integrate	Reduce the customer effort and pain required to integrate
Configure	Mitigate confusion and errors to ease setup process
Train	Prepare customer stakeholders for product use &amp; first filing
Early Use	Mitigate early use risks &amp; ensure experience meets expectations
Continued Use	Build &amp; enhance relationship through quality service &amp; value-added content
Renewal	Provide timely information, transparency, &amp; support to help inform and convert customer renewals
Maintain and Grow	Drive continued value to mitigate churn, grow accounts, &amp; develop promoters</description>
        <label>Where did the issue first occur?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Integrate</fullName>
                </value>
                <value>
                    <fullName>Configure</fullName>
                </value>
                <value>
                    <fullName>Train</fullName>
                </value>
                <value>
                    <fullName>Early Use</fullName>
                </value>
                <value>
                    <fullName>Continued Use</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Maintain and Grow</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Did_You_Buy__c</fullName>
        <label>Why Did You Buy?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Told to do it</fullName>
                </value>
                <value>
                    <fullName>Save money</fullName>
                </value>
                <value>
                    <fullName>Free staff time</fullName>
                </value>
                <value>
                    <fullName>Reduce audit exposure</fullName>
                </value>
                <value>
                    <fullName>Reduce P&amp;I exposure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1099_Assigned__c</fullName>
        <label>1099 Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1099_Complete_DateTime__c</fullName>
        <label>1099 Complete DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X1099_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1099 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1099_Stamp__c</fullName>
        <label>1099 Stamp</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>SmartTask</label>
    <listViews>
        <fullName>Refund_Procesed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Refund_Required__c</columns>
        <columns>Refund_Required_Checked_By__c</columns>
        <columns>Refund_Required_Date_Checked__c</columns>
        <columns>Refund_Processed__c</columns>
        <columns>Refund_Processed_Checked_By__c</columns>
        <columns>Refund_Processed_Date_Checked__c</columns>
        <columns>Refund_Check_Mail_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refund_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Refund Procesed</label>
    </listViews>
    <listViews>
        <fullName>Refund_Required1</fullName>
        <columns>NAME</columns>
        <columns>Action_Taken__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Refund_Required_Date_Checked__c</columns>
        <columns>Refund_Required_Checked_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refund_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Acctg_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ActivationFee__c</field>
            <operation>equals</operation>
        </filters>
        <label>Refund Required (SmartTasks)</label>
    </listViews>
    <listViews>
        <fullName>RejectedSTAll</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Subject__c</columns>
        <columns>TaskStatus__c</columns>
        <columns>ApprovalStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>TenSoft_Complete__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected SmartTasks</label>
    </listViews>
    <listViews>
        <fullName>STTAXSVCSCLOSED</fullName>
        <columns>TaxServicesComplete__c</columns>
        <columns>Account__c</columns>
        <columns>Subject__c</columns>
        <columns>NAME</columns>
        <columns>TaxServices_Assigned__c</columns>
        <columns>TaxSvcsElapsedDays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TaxServicesComplete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.Tax_Svcs_SOW</value>
        </filters>
        <filters>
            <field>TaxServices_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>SmartTasks (Completed Tax Services)</label>
    </listViews>
    <listViews>
        <fullName>STTAXSVCSOPEN</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>NAME</columns>
        <columns>SiteManagerID__c</columns>
        <columns>Account__c</columns>
        <columns>Subject__c</columns>
        <columns>TaxServices_Assigned__c</columns>
        <columns>TaxServicesCompleteDateTime__c</columns>
        <columns>TaxSvcsElapsedDays__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TaxServicesComplete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.Tax_Svcs_SOW</value>
        </filters>
        <filters>
            <field>TaxServices_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>TaskStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>SmartTasks (Pending Tax Services)</label>
    </listViews>
    <listViews>
        <fullName>STTXNCREDITSALL</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Task_Reason__c</columns>
        <columns>Credit_Type__c</columns>
        <columns>Transaction_Credit__c</columns>
        <columns>Transaction_Credit_Effective_Date__c</columns>
        <columns>Transaction_Limit__c</columns>
        <columns>Start_Txn_Limit__c</columns>
        <columns>Stop_Txn_Limit__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.Transaction_Credit</value>
        </filters>
        <label>Transaction Credits (All)</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_All</fullName>
        <booleanFilter>(1 AND 2) or 3</booleanFilter>
        <columns>SiteManagerID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Change_Proposed__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>AcctgAssigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>ApprovalStamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctgAssigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.AccountingAdjustment,SmartTask__c.Invoice_Adjustment</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Melissa Craig</value>
        </filters>
        <label>SmartTasks - All</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_All1</fullName>
        <columns>SiteManagerID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Change_Proposed__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>AcctgAssigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>ApprovalStamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acctg_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctgAssigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.AccountingAdjustment,SmartTask__c.Invoice_Adjustment</value>
        </filters>
        <label>SmartTasks - All</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_All2</fullName>
        <columns>SiteManagerID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Change_Proposed__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>AcctgAssigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>ApprovalStamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acctg_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctgAssigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.AccountingAdjustment,SmartTask__c.Invoice_Adjustment</value>
        </filters>
        <label>SmartTasks - All</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_All_Pending</fullName>
        <columns>SiteManagerID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Change_Proposed__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>AcctgAssigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>ApprovalStamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acctg_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctgAssigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SmartTask__c.AccountingAdjustment,SmartTask__c.Invoice_Adjustment</value>
        </filters>
        <label>SmartTasks - All Pending</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_All_Pending2</fullName>
        <columns>SiteManagerID__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Change_Proposed__c</columns>
        <columns>Task_Approved__c</columns>
        <columns>AcctgAssigned__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TaskStatus__c</columns>
        <columns>Acctg_Complete__c</columns>
        <columns>ApprovalStamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ApprovalStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acctg_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctgAssigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>SmartTasks - All Pending</label>
    </listViews>
    <listViews>
        <fullName>SmartTasks_Completed_Tensoft</fullName>
        <columns>NAME</columns>
        <columns>TenSoftCompleteDateTime__c</columns>
        <columns>TenSoft_Complete__c</columns>
        <columns>SiteManagerID__c</columns>
        <columns>Account__c</columns>
        <columns>TenSoft_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TenSoft_Complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SmartTasks (Completed Tensoft)</label>
    </listViews>
</CustomObject>